--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                         <hr class="divider" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 mb-5">Your Royal Enfield Deserves the best, Older models and Customizations are rarely supported by the showrrom. Bring your bike to the Royal Bullet Garage</p>
-                        <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
+                        <p class="text-white-75 mb-5">The Royal Bullet Garage can help you maintain, repair and customize Your Royal Enfield. All RE models from old to new are welcome.</p>
+                        <a class="btn btn-primary btn-xl" href="#about">Fix My Bike!</a>
                     </div>
                 </div>
             </div>
@@ -54,9 +54,9 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">We've got what you need!</h2>
+                        <h2 class="text-white mt-0">Meet Our Mechanic</h2>
                         <hr class="divider divider-light" />
-                        <p class="text-white-75 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
+                        <p class="text-white-75 mb-4">Tabrez has over 25 years of experience working with Royal Enfield Bikes. He has worked at multiple garages in the Shivaji Nagar area before opening his own 3 years ago.</p>
                         <a class="btn btn-light btn-xl" href="#services">Get Started!</a>
                     </div>
                 </div>
